# stdr_simulator

./: .travis.yml
stdr_gui/: CMakeLists.txt  GuiTests.cmake  package.xml
stdr_gui/tests/: stdr_gui_laser_test.cpp
stdr_robot/include/stdr_robot/: stdr_robot.h  stdr_robot_tools.h
stdr_robot/include/stdr_robot/motion/: ideal_motion_controller.h  motion_controller_base.h
stdr_robot/src/: stdr_robot.cpp
stdr_robot/src/motion/: ideal_motion_controller.cpp
stdr_tests/: CMakeLists.txt  package.xml
stdr_tests/src/: test.cpp
